--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -32,6 +32,8 @@
       {
         "argsIgnorePattern": "req|res|next|val"
       }
-    ]
+    ],
+        "camelcase": ["error", {"properties": "always"}]
+
   }
 }
